renamed the class